--- a/todo-list/client/src/App.css
+++ b/todo-list/client/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #8db3ffea;
+  height: 60px;
   display: flex;
-  flex-direction: column;
+  padding: 30px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .App-link {
@@ -35,4 +35,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+.main.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #61dafb;
 }
